# kattis_solutions

./: CMakeLists.txt  janitortroubles.cpp  knotknowledge.cpp  laptopsticker.cpp  magictrick.cpp  oddities.cpp  skolvagen.cpp  teque.cpp
