cmake_minimum_required(VERSION 3.22)
project(oddities)
project(magictrick)
project(laptopsticker)
project(knotknowledge)
project(janitortroubles)

set(CMAKE_CXX_STANDARD 17)

add_executable(oddities oddities.cpp)
add_executable(magictrick magictrick.cpp)
add_executable(laptopsticker laptopsticker.cpp)
add_executable(knotknowledge knotknowledge.cpp)
add_executable(janitortroubles janitortroubles.cpp)
